# kosmos

./: .gitignore  CMakeLists.txt  README.md
assets/: Sprite-0001.aseprite
libs/glad/: glad.c
libs/rayfork/: CMakeLists.txt  rayfork.c  rayfork.h
libs/sokol/: sokol_app.h  sokol_audio.h
src/: main.c  platform.c  platform.h  scene.c  scene.h
src/scenes/: game_scene.c  game_scene.h  main_scene.c  main_scene.h
src/utils/: button.h
